# learn-rust-scratch-docker

./: Cargo.toml  Dockerfile
helm/app/: values.yaml
helm/app/templates/: deployment.yaml
src/: main.rs
