[package]
name = "app"
version = "0.1.0"
authors = ["andrew webber (personal) <andrewvwebber@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.6"
tokio = { version = "0.2", features = ["full"] }
reqwest = {version= "0.10.7", features = ["rustls-tls"]}
openssl = { version = "0.10", features = ["vendored"] }
